# yarrp

./: CMakeLists.txt  Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: build.yaml
crates/libs/proxy/: Cargo.toml
crates/libs/proxy/src/: acceptor.rs  conn.rs  lib.rs  proxy.rs  proxy_service.rs  test_util.rs  uds_service.rs
crates/libs/proxy/src/accept_stream/: rustls.rs
crates/libs/proxy/src/connector/: tcp.rs  uds.rs
crates/libs/tokio-schannel/: Cargo.toml
crates/libs/tokio-schannel/src/: lib.rs  tests.rs
crates/libs/yarrp/: Cargo.toml
crates/libs/yarrp-openssl/: Cargo.toml
crates/libs/yarrp-openssl/src/: lib.rs  ssl_stream.rs
crates/libs/yarrp-openssl/src/accept_stream/: mod.rs  openssl.rs
crates/libs/yarrp-openssl/src/connector/: mod.rs  openssl.rs
crates/libs/yarrp-rustls/: Cargo.toml
crates/libs/yarrp-rustls/src/: cng.rs  lib.rs  test_util.rs
crates/libs/yarrp-rustls/src/accept_stream/: authorize.rs  mod.rs  rustls.rs
crates/libs/yarrp/src/: lib.rs  proxy.rs  proxy_service.rs
crates/libs/yarrp/src/accept_stream/: mod.rs  uds.rs
crates/libs/yarrp/src/connector/: mod.rs  win_uds.rs
crates/samples/tonic_bin/: Cargo.toml
crates/samples/tonic_bin/src/: main.rs
crates/samples/tonic_openssl_test/: Cargo.toml
crates/samples/tonic_openssl_test/src/: lib.rs  openssl_helper.rs
crates/samples/tonic_test/: Cargo.toml  build.rs
crates/samples/tonic_test/src/: lib.rs  rustls_client.rs
