[workspace]
resolver = "2"
members = [ "crates/libs/proxy",
]

[workspace.dependencies]
rustls-cng = { git = "https://github.com/rustls/rustls-cng.git", default-features = false}
rustls = {version = "0.23.7", default-features = false, features = ["std"]}
hex = "0.4"
tokio-rustls = { version = "0.26", default-features = false}
tokio = { version = "1.0", features = ["full"] }
bytes = "*"
rustls-symcrypt = "0.1.0"
uds_windows = "*"
hyper = {version = "1", features= ["client"]}
hyper-util = { version = "*",  default-features = false, features = ["server-auto", "tokio", "client-legacy"] }
http-body-util = "*"
tower = "*"
hyperlocal-with-windows = "*"
tokio-util = "*"
cfg-if = "1.0"
trait-variant = "0.1"
# libs in this repo
proxy = {path = "./crates/libs/proxy"}

[patch.crates-io]
# cng uses this dep without version so we use it same for it to compile
rustls = { git = "https://github.com/rustls/rustls.git" } # same as cng
