[workspace]
resolver = "2"
members = [
  "crates/libs/yarrp",
  "crates/libs/yarrp-openssl",
  "crates/libs/yarrp-rustls", "crates/samples/tonic_bin",
  "crates/samples/tonic_openssl_test",
  "crates/samples/tonic_test",
]

[workspace.dependencies]
rustls-cng = { git = "https://github.com/rustls/rustls-cng.git", default-features = false }
rustls = { version = "0.23.7", default-features = false, features = ["std"] }
hex = "0.4"
tokio-rustls = { version = "0.26", default-features = false }
tokio = { version = "1.0", features = ["full"] }
# bytes = "*"
rustls-symcrypt = "0.1.0"
uds_windows = "*"
hyper = { version = "1", features = ["client"] }
hyper-util = { version = "*", default-features = false, features = [
  "server-auto",
  "tokio",
  "client-legacy",
] }
http-body-util = "*"
tower = "*"
hyperlocal-with-windows = "*"
tokio-util = "*"
cfg-if = "1.0"
trait-variant = "0.1"
tokio-stream = { version = "0.1", features = ["net"] }
# async-stream = { version = "*" }
futures = "*"
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
prost-build = "0.13"
http = "*"
x509-parser = "*"
# openssl stuff
openssl = { version = "0.10" }
tokio-openssl = { version = "0.6" }
pin-project-lite = "0.2"
# libs in this repo
yarrp = { path = "./crates/libs/yarrp" }
yarrp-rustls = { path = "./crates/libs/yarrp-rustls" }
yarrp-openssl = { path = "./crates/libs/yarrp-openssl" }
# test crates
tonic_test = { path = "./crates/samples/tonic_test" }
tonic_openssl_test = {path = "./crates/samples/tonic_openssl_test"}

[patch.crates-io]
# cng uses this dep without version so we use it same for it to compile
rustls = { git = "https://github.com/rustls/rustls.git" } # same as cng
