[package]
name = "yarrp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
# uds_windows.workspace = true
http-body-util.workspace = true
tower.workspace = true
# hyperlocal-with-windows.workspace = true
uds_windows.workspace = true
tokio-util.workspace = true
cfg-if.workspace = true
trait-variant.workspace = true
tokio-stream.workspace = true
futures.workspace = true
http.workspace = true