[package]
name = "tonic_test"
version = "0.1.0"
edition = "2021"

[dependencies]
proxy.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
hyper-util.workspace = true

[build-dependencies]
tonic-build.workspace = true
# prost-build.workspace = true

[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true