[package]
name = "tonic_test"
version = "0.1.0"
edition = "2021"

[dependencies]
yarrp.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
hyper-util.workspace = true
tower.workspace = true
hyperlocal-with-windows.workspace = true # remove file
tokio-rustls.workspace = true
rustls-cng.workspace = true
rustls-symcrypt.workspace = true

[build-dependencies]
tonic-build.workspace = true
# prost-build.workspace = true

[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true